# apexive-test

./: README.md
apexive/: .pre_commit_config.yml  manage.py  pyproject.toml
apexive/apexive/: asgi.py  settings.py  urls.py  wsgi.py
apexive/hotels/: models.py  querysets.py  serializers.py  urls.py  views.py
