[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "apexive-test"
version = "0.1.0"
description = ""
authors = ["corbands@gmail.com"]

[tool.poetry.dependencies]
python = "^3.11"
Django = "^5"
djangorestframework = "^3.12"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
flake8 = "^3.8.3"
isort = "^5.5.2"
pytest = "^6.0.1"
pytest-django = "^4.1.0"

[tool.poetry.scripts]
